force-app/main/default/objects/SiteNotification__c/SiteNotification__c.object-meta.xml
<CustomObject>
    <label>SiteNotification</label>
    <nameField>
        <label>SiteNotification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteNotifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>