force-app/main/default/objects/SiteNotification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SiteNotifications</relationshipLabel>
    <relationshipName>SiteNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>