force-app/main/default/objects/SiteNotification__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>240</length>
    <type>Text</type>
</CustomField>