force-app/main/default/objects/SiteNotification__c/fields/Brand_DONMARIO__c.field-meta.xml
<CustomField>
    <fullName>Brand_DONMARIO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand DONMARIO</label>
    <type>Checkbox</type>
</CustomField>