force-app/main/default/objects/SiteNotification__c/fields/Brand_GDM__c.field-meta.xml
<CustomField>
    <fullName>Brand_GDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand GDM</label>
    <type>Checkbox</type>
</CustomField>