force-app/main/default/objects/SiteNotification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bean Blog Post</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>GDM Explore Harvest Visit Cancel</fullName>
            </value>
            <value>
                <fullName>GDM Explore Invitation Answer</fullName>
            </value>
            <value>
                <fullName>GDM Explore Invitation Cancelled</fullName>
            </value>
            <value>
                <fullName>GDM Explore Invitation Created</fullName>
            </value>
            <value>
                <fullName>GDM Explore Invitation Rescheduled</fullName>
            </value>
            <value>
                <fullName>GDM Explore New User Approval Request</fullName>
            </value>
            <value>
                <fullName>GDM Explore Note Sharing</fullName>
            </value>
            <value>
                <fullName>GDM Explore Visit</fullName>
            </value>
            <value>
                <fullName>GDM Explore Visit Canceled Harvest</fullName>
            </value>
            <value>
                <fullName>GDM Explore Visit Irrigation Off</fullName>
            </value>
            <value>
                <fullName>GDM Explore Visit Irrigation On</fullName>
            </value>
            <value>
                <fullName>GDM Explore Visit Reminder</fullName>
            </value>
            <value>
                <fullName>Plot Location Harvest</fullName>
            </value>
            <value>
                <fullName>Plot Location Irrigation</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Product Recommendation</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>