force-app/main/default/objects/SiteNotification__c/fields/Explore_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Explore_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Invitation</label>
    <referenceTo>Explore_Invitation__c</referenceTo>
    <relationshipLabel>SiteNotifications</relationshipLabel>
    <relationshipName>SiteNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>