force-app/main/default/objects/SiteNotification__c/fields/Link_to__c.field-meta.xml
<CustomField>
    <fullName>Link_to__c</fullName>
    <label>Link to</label>
    <length>200</length>
    <type>Text</type>
</CustomField>