force-app/main/default/objects/SiteNotification__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>SiteNotifications</relationshipLabel>
    <relationshipName>SiteNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>