force-app/main/default/objects/SiteNotification__c/fields/Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Count__c</fullName>
    <label>Recipient Count</label>
    <summaryForeignKey>SiteNotificationRecipient__c.SiteNotification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>