force-app/main/default/objects/SiteNotification__c/fields/RecipientProfile__c.field-meta.xml
<CustomField>
    <fullName>RecipientProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecipientProfile</label>
    <referenceTo>SiteUserProfile__c</referenceTo>
    <relationshipLabel>SiteNotifications</relationshipLabel>
    <relationshipName>SiteNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>