force-app/main/default/objects/SiteNotification__c/fields/Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Visit</label>
    <referenceTo>Plot_Exploration__c</referenceTo>
    <relationshipLabel>SiteNotifications</relationshipLabel>
    <relationshipName>SiteNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>