force-app/main/default/objects/SiteNotification__c/fields/Title_old__c.field-meta.xml
<CustomField>
    <fullName>Title_old__c</fullName>
    <label>Title_old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A new Bean Blog Post has been published</fullName>
            </value>
            <value>
                <fullName>A new visit has been scheduled</fullName>
            </value>
            <value>
                <fullName>You have an scheduled visit tomorrow</fullName>
            </value>
            <value>
                <fullName>Another user is sharing their notes with you</fullName>
            </value>
            <value>
                <fullName>Opening day for reporting</fullName>
            </value>
            <value>
                <fullName>The report is due next week</fullName>
            </value>
            <value>
                <fullName>News announcementve</fullName>
            </value>
            <value>
                <fullName>New Product Data has been released</fullName>
            </value>
            <value>
                <fullName>Product Data changes has been released</fullName>
            </value>
            <value>
                <fullName>New Product Recommendation has been posted</fullName>
            </value>
            <value>
                <fullName>Business news</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>