force-app/main/default/objects/SiteNotification__c/fields/Token_Count__c.field-meta.xml
<CustomField>
    <fullName>Token_Count__c</fullName>
    <inlineHelpText>This is number of tokens (phones) that are registered with the app to receive notifications for this filtered set of users.</inlineHelpText>
    <label>Token Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>