force-app/main/default/objects/SiteNotification__c/listViews/TODAY_Notifications.listView-meta.xml
<ListView>
    <fullName>TODAY_Notifications</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Recipient_Count__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Scheduled_Visit__c</columns>
    <columns>Posted_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Body__c</columns>
    <columns>Plot_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>GDM Explore New User Approval Request</value>
    </filters>
    <label>TODAY Notifications</label>
</ListView>